
   * Generalized volumetric rendering: (1) mesh (2) solid (3) colormaps

   * Integrated tutorial/demonstration system

   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems, etc).
     sometimes it just fails period

In Progress

   * real session saves nearing completion...

Changes up to 0.86

   * ray_shadows setting

Changes up to 0.85

   * mmatrix now stores the complete view instead of just the rotation matrix

   * unset command

   * fixed handling of calcium atoms
   
   * added automatic scroll bar for when you get too many objects/selections

   * added handle to manually adjust internal gui width

   * updated OpenGL depth_cue setting to more closely match those of raytracer

   * "center" command

   * PyMOL no longer wraps output lines by default "set wrap_output=78"
     to get previous behavior

   * relocated binary shared objects from modules into the modules/pymol
     tree

   * data files now separated from the modules directory into a parallel data
     tree in $PYMOL_PATH

   * added ability to build PyMOL using Python distutils
   
   * revamped the PyMOL launch process.  It should now be possible
     to launch pymol simply with an "import pymol" statement, provided
     that the modules are in the Python search path

   * fixed get_dihedral to use current state index

   * revamped smooth command and added documentation

   * added some nasty code to handle quotes and apostrophes in atom selections
     so that nucleic acids and sugars with apostrophes will work right while
     you can also still explicitly use apostrophes or quotes

   * added "safe" option to zoom command in order to provide a mode
     which will guarantee against clipping

Changes up to 0.84

   * updated SPHEROID command for use with trajectories

   * Can now read AMBER topology, coordinate, trajectory, and restart files
